--- a/{{cookiecutter.project_slug}}/.editorconfig
+++ b/{{cookiecutter.project_slug}}/.editorconfig
@@ -19,3 +19,12 @@ insert_final_newline = false
 
 [Makefile]
 indent_style = tab
+
+[*.yml]
+indent_size = 2
+
+[*.{c,cpp,h,hpp}]
+indent_size = 2
+
+[*.css]
+indent_size = 2
