--- a/{{cookiecutter.project_slug}}/.gitignore
+++ b/{{cookiecutter.project_slug}}/.gitignore
@@ -3,8 +3,13 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
+# C extensions / intermediate files
 *.so
+*.dylib
+*.dll
+*.o
+*.def
+*.a
 
 # Distribution / packaging
 .Python
