--- a/{{cookiecutter.project_slug}}/.editorconfig
+++ b/{{cookiecutter.project_slug}}/.editorconfig
@@ -4,7 +4,7 @@ root = true
 
 [*]
 indent_style = space
-indent_size = 4
+indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
 charset = utf-8
@@ -20,11 +20,5 @@ insert_final_newline = false
 [Makefile]
 indent_style = tab
 
-[*.yml]
-indent_size = 2
-
-[*.{c,cpp,h,hpp}]
-indent_size = 2
-
-[*.css]
-indent_size = 2
+[*.{py,ini,rst}]
+indent_size = 4
